--- a/css/style2.css
+++ b/css/style2.css
@@ -40,6 +40,7 @@ body:has(.requires-no-scroll) {
     min-height: calc(80vh);
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.6) 100%);
 backdrop-filter: blur(67px);
+-webkit-backdrop-filter: blur(67px);
     position: absolute;
     bottom: 0;
 }
