--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,9 @@
-html, body {margin: 0; height: 100%; overflow: hidden}
+html,
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden
+}
 
 body {
     color: black;
@@ -11,7 +16,8 @@ body {
 
 body:has(.requires-no-scroll) {
     overflow: hidden;
-  }
+}
+
 /* #sec-logo img {
     width: 180px;
     max-width: 100%;
@@ -37,10 +43,11 @@ body:has(.requires-no-scroll) {
 .content {
     width: 100vw;
     text-align: center;
-    min-height: calc(80vh);
+    max-height: 700px;
+    height: 100%;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.6) 100%);
-backdrop-filter: blur(67px);
--webkit-backdrop-filter: blur(67px);
+    backdrop-filter: blur(67px);
+    -webkit-backdrop-filter: blur(67px);
     position: absolute;
     bottom: 0;
 }
@@ -68,7 +75,7 @@ backdrop-filter: blur(67px);
 
 .sec-hero {
     background-color: yellow;
-    
+
 }
 
 .sec-botoes {
@@ -108,17 +115,17 @@ backdrop-filter: blur(67px);
 }
 
 .footer {
-    color:#BFB5A7;
+    color: #BFB5A7;
     padding: 24px 0px;
 }
 
 ul {
     list-style: none;
     padding: 0px;
-    margin: 0px 0px 18px 0px ;
+    margin: 0px 0px 18px 0px;
 }
 
-ul > li {
+ul>li {
     display: inline-block;
     margin: 0px 8px;
 }
@@ -128,4 +135,3 @@ p {
     padding: 0;
     font-size: 16px;
 }
-
