--- a/css/style2.css
+++ b/css/style2.css
@@ -54,7 +54,7 @@ body:has(.requires-no-scroll) {
 }
 
 .content {
-    width: 100vw;
+    min-width: 100vw;
     text-align: center;
     min-height: 100%;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.6) 100%);
