--- a/css/style.css
+++ b/css/style.css
@@ -1,102 +1,195 @@
-:root {
-    --mainColor: #9D7E6C;
-    --textColor: #A19B97;
-    --bgColor: #F5F4F0;
-    --white: #fff;
-    --black: #000;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Besley:wght@400;500&family=Poppins:wght@400;500&display=swap');
 
 body {
-    background-color: var(--bgColor); 
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    color: black;
+    font-family: 'Poppins', sans-serif !important;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
     font-weight: 400;
-    color: var(--textColor);
+    background-image: url(../img/bg-content.png);
+    background-size: cover;
 }
 
-h1 {
-    font-weight: 500;
-    letter-spacing: -1px;
-    color: var(--mainColor);
+.background {
+    /* background-image: url(../img/bg-mobile.jpg); */
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 180px;
+    position: relative;
 }
 
-footer {
+.background .background-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    background-position-y: center;
+  }
+  
+  .background .background-img.active {
+    opacity: 1;
+  }
+
+
+.logo-photo {
+    background-color: white;
+    width: 140px;
+    height: 140px;
+    border-radius: 100%;
+
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    float: left;
+    position: absolute;
+    bottom: -70px; 
+}
+
+.boas-vindas {
+    padding-top: 100px;
+    min-height: 160px;
+    height: auto;
+}
+
+.content {
+    min-width: 100vw;
+    text-align: center;
+    min-height: 100%;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.6) 100%);
+    backdrop-filter: blur(67px);
+    -webkit-backdrop-filter: blur(67px);
+    position: absolute;
+    bottom: 0;
+    background-image: url(../img/bg-content.png);
+    background-size: cover;
+}
+
+
+.logo-photo img {
+    width: 110px;
+}
+
+.sec-hero {
+    background-color: yellow;
+
+}
+
+.sec-botoes {
+    position: relative;
+    min-height: 313px;
+    height: auto;
+}
+
+
+
+
+
+.group-btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+.sec-horario {
+    color: #A89586;
+    line-height: 24px;
+    padding: 40px 0px;
+}
+
+.footer {
+    color: #BFB5A7;
+    padding: 24px 0px;
+    height: 140px;
+}
+
+.footer p{
     font-size: 14px;
-    padding: 32px;
+    color: #BFB5A7;
 }
 
 ul {
     list-style: none;
     padding: 0px;
-    width: 100%;
+    margin: 0px 0px 18px 0px;
 }
 
-ul li {
-    margin: 16px 0px;
-    display: block;
+ul>li {
+    display: inline-block;
+    margin: 0px 8px;
 }
 
-.btn-vnla {
-    background-color: var(--mainColor);
-    color: white;
-    /* border: solid 1px var(--mainColor);
-    color: var(--mainColor); */
-    text-decoration: none;
-    width: 100%;
-    padding: 24px;
-    width: 100%;
-    border-radius: 8px;
-    margin: 8px 0px;
-    transition: all 0.5s ease-in-out; 
+p {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
 }
 
-.disable {
-    opacity: 0.3;
+h1 {
+    color: #8D7C6F;
+    font-size: 24px;
 }
 
-.disable:hover {
-    transform: initial !important;
-    filter: initial !important;
+p {
+    font-size: 16px;
+    padding: 0px;
+    margin: 0px;
+    color: #A89586;
 }
 
-a img {
-    margin-right: 8px;
-}
-
-.btn-vnla:hover {
-    filter: brightness(1.1);
-    transform: scale(1.05);
-}
-
-.btn-whats {
-    /* border: solid 1px #709D6C;
-    color: #709D6C; */
-    background-color: #709D6C;
-}
-
-header {
-    padding: 32px;
-}
-
-header img {
-    min-width: 200px;
-}
-
-header {
-    height: 150px;
-}
-
-.logo {
-    width: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
+.atendimento {
+    min-height: 100px;
+    height: auto;
 }
 
 .besley {
     font-family: 'Besley', serif;
-    font-style: italic ;
+    font-style: italic;
+    font-weight: 600;
+}
+
+.btn-vnle {
+    width: 366px;
+    max-width: 100%;
+    margin: 8px 0px;
+    padding: 16px;
+    color: white;
+    background-color: #C5AA96;
+    border: none;
+    border-radius: 8px;
+
+}
+
+.btn-whts {
+    background-color: #969F90 !important;
+}
+
+.btn-vnle img {
+    width: 22px;
+    margin-right: 8px;
+}
+
+.btn-vnle:hover {
+    filter: brightness(1.1);
+
+}
+
+a:hover {
+    transform: scale(1.05);
+}
+
+a {
+    transition: all 0.5s ease-in-out;
 }
