--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,16 @@ body {
 }
 
 .background {
-    /* background-image: url(../img/bg-mobile.jpg); */
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     width: 100%;
     height: 180px;
     position: relative;
+}
+
+.background img {
+    max-width: 150%;
 }
 
 .background .background-img {
