--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 
 
 .logo-photo {
-    background-color: white;
+    background-color: #9D7E6C;
     width: 140px;
     height: 140px;
     border-radius: 100%;
